tests/fixtures/positive/structure/PreferSwitchOverIfElseChains_MinElseIf3.cls
public class Example {
    public void method(String x) {
        if (x == 'a') {
        } else if (x == 'b') {
        }
    }
}

