tests/fixtures/negative/structure/PreferSwitchOverIfElseChains_MinElseIf4.cls
public class Example {
    public void method(String x) {
        if (x == 'a') {
        } else if (x == 'b') {
        } else if (x == 'c') {
        } else if (x == 'd') {
        }
    }
}

